<resources>
    <string name="app_name">Olx application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="olx">OLX</string>
    <string name="india">India</string>
    <string name="leading_market">India\'s Leading Market Place</string>
    <string name="continue_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="terms">If you are accepting olx\n terms and conditions along with privacy policy</string>
    <string name="facebook_app_id">326277305055270</string>
    <string name="fb_login_protocol_scheme">fb326277305055270</string>
    <string name="searchtext">Search for Books, PDFs, and more...</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="books">Books</string>
    <string name="title_sell">Sell</string>
    <string name="what_are_you_selling">What are you selling?</string>
    <string name="name">Name *</string>
    <string name="ad_title">Ad Title *</string>
    <string name="author">Author Name *</string>
    <string name="year">Year *</string>
    <string name="mention_details">Mention the key features of the material(publication, publication details, etc)</string>
    <string name="describe">Describe about what you are selling</string>
    <string name="sell_price">Price *</string>
    <string name="phno">Phno *</string>
    <string name="required_fields">* Required Fields</string>
    <string name="next">Next</string>
    <string name="title_include_details">Include Details</string>
    <string name="file_size">Size(in mb)*</string>
    <string name="desc">Genre, Educational, Guide..</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="uploadtext">Upload upto 5 photos</string>
    <string name="preview">Preview</string>
    <string name="upload">Upload</string>
    <string name="title_upload_photo">Upload Photos</string>
    <string name="select_source">Select Source</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="title_myads">My Ads</string>
    <string name="details">Details</string>
    <string name="call">Call</string>
    <string name="title_details">Details</string>
    <string name="title_browse">Browse Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="title_settings">Settings</string>
</resources>
