<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.haripriya.olxapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_sell"
        android:name="com.haripriya.olxapplication.ui.sell.SellFragment"
        android:label="@string/title_sell"
        tools:layout="@layout/fragment_sell" >

        <action
            android:id="@+id/action_sell_to_include_details"
            app:destination="@+id/navigation_include_details"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/navigation_sell"
            app:popUpToInclusive="false"/>

    </fragment>
    <fragment
        android:id="@+id/navigation_upload_photo"
        android:name="com.haripriya.olxapplication.ui.uploadPhoto.UploadPhotoFragment"
        android:label="@string/title_upload_photo"
        tools:layout="@layout/fragment_upload_photo" />
    <fragment
        android:id="@+id/navigation_include_details"
        android:name="com.haripriya.olxapplication.ui.includeDetails.IncludeDetailsFragment"
        android:label="@string/title_include_details"
        tools:layout="@layout/fragment__include_details" >

        <action
            android:id="@+id/action_details_photo_upload"
            app:destination="@+id/navigation_upload_photo"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/navigation_include_details"
            app:popUpToInclusive="false"/>


    </fragment>
</navigation>
