<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olx"
        android:textSize="@dimen/dp_84"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/merienda"
        android:layout_marginTop="@dimen/dp_180"
        android:textColor="@android:color/white"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/india"
        android:fontFamily="@font/merienda"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leading_market"
        android:layout_gravity="center"
        android:fontFamily="@font/merienda"
        android:layout_marginTop="@dimen/dp_50"
        android:textSize="@dimen/sp_15"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        />



</LinearLayout>