<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:cardCornerRadius="@dimen/dp_16"
>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
        >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/select_source"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_24"
                android:background="@android:color/darker_gray"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/photo_gallery"
                android:textColor="@color/colorPrimaryDark"
                android:padding="@dimen/dp_16"
                android:textSize="@dimen/sp_20"
                android:id="@+id/tv_photogallery"
            />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_24"
                android:background="@android:color/darker_gray"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/camera"
                android:textColor="@color/colorPrimaryDark"
                android:padding="@dimen/dp_16"
                android:textSize="@dimen/sp_20"
                android:id="@+id/tv_camera"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/dp_16"
        android:textColor="@color/colorPrimaryDark"
        android:padding="@dimen/dp_16"
        android:textSize="@dimen/sp_20"
        android:id="@+id/tv_cancel"
        />

</LinearLayout>