<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".65"
        android:background="@color/colorLightGrey"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_180"
            android:fontFamily="@font/merienda"
            android:text="@string/olx"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dp_84"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/merienda"
            android:text="@string/india"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35"
        android:background="@color/colorPrimaryDark"
        android:gravity="center|top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@android:color/white"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:padding="@dimen/dp_4"
                android:src="@drawable/googleg_standard_color_18" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/continue_google"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/go_login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@android:color/white"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:padding="@dimen/dp_4"
                android:src="@drawable/facebook" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/fb_login"/>



        </LinearLayout>
<androidx.appcompat.widget.AppCompatTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/terms"
    android:textColor="@android:color/white"
    android:layout_marginTop="@dimen/dp_50"
    android:textAlignment="center"
    />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />
    </LinearLayout>

</LinearLayout>