<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/dp_8"
            >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_320"
            app:cardCornerRadius="@dimen/dp_4"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/dp_8"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_16"
                android:background="@drawable/box_dashed_line"
                android:gravity="center"
                android:id="@+id/linearlayout_choosephoto"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="@dimen/dp_84"
                    android:layout_height="@dimen/dp_50"
                    android:id="@+id/ivchoosephoto"
                    android:src="@drawable/ic_camera"
                    android:tint="@color/colorPrimaryDark"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/choose_photo"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv_photo"
                    android:visibility="gone"
                    />
                
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120"
            android:background="@drawable/box_black_bg_white"
            android:layout_marginTop="@dimen/dp_84"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/uploadtext"
                android:textAllCaps="true"
                android:background="@android:color/white"
                android:gravity="center"

                />
                
        </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_18"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/dp_160"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonPreview"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/preview"
                    android:background="@drawable/box_blue_bg_white"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/dp_160"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonUpload"
                    android:textAllCaps="false"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"
                    android:text="@string/upload"
                    android:background="@drawable/box_blue_bg_blue"
                    />


            </RelativeLayout>

        </LinearLayout>
        


    </ScrollView>

</LinearLayout>