<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorLightGrey"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                android:padding="@dimen/dp_4"
                android:id="@+id/imageViewLocation"
                android:layout_centerVertical="true"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageViewLocation"
                android:text="@string/india"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_4"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notifications_black_24dp"
                android:padding="@dimen/dp_4"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:background="@drawable/box_black_bg_white"
            android:layout_margin="@dimen/dp_16"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                android:padding="@dimen/dp_4"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:id="@+id/edsearch"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/searchtext"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"

            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:padding="@dimen/dp_8"
                android:textColor="@android:color/black"
                android:text="@string/browse_categories"

                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_8"
                android:id="@+id/rv_categories"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>